--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                                   <p class="mb-1">
                                     <ul>
                                       <li><b>Papers:</b> <a href="https://openreview.net/group?id=KDD.org/2024/Workshop/Amazon_KDD_Cup" style="color: black;">OpenReview</a>  </li>
-                                      <li><b>Posters:</b> <a href="https://github.com/kddcup23/kddcup23.github.io/tree/main/posters" style="color: black;">Check here</a>  </li>
+                                      <li><b>Posters:</b> <a href="https://github.com/amazon-kddcup24/amazon-kddcup24.github.io/tree/main/posters" style="color: black;">Check here</a>  </li>
 
                                       </li>
                                     </ul>
