--- a/index.html
+++ b/index.html
@@ -343,15 +343,7 @@
                         </p>
                         <p>Our dataset paper is available at <a href="https://arxiv.org/abs/2307.09688">ArXiv</a>, and the Shopping MMLU dataset is available at <a href="https://github.com/KL4805/ShoppingMMLU">github</a>. Please cite our paper if you find our work helpful. <br>
                         
-                        <code>
-                            @article{jin2023amazon,<br>
-                                title={Amazon-M2: A Multilingual Multi-locale Shopping Session Dataset for Recommendation and Text Generation},<br>
-                                author={Wei Jin and Haitao Mao and Zheng Li and Haoming Jiang and Chen Luo and Hongzhi Wen and Haoyu Han and Hanqing Lu and Zhengyang Wang and Ruirui Li and Zhen Li and Monica Xiao Cheng and Rahul Goutam and Haiyang Zhang and Karthik Subbian and Suhang Wang and Yizhou Sun and Jiliang Tang and Bing Yin and Xianfeng Tang},<br>
-                                journal={arXiv preprint arXiv:2307.09688}, <br>
-                                year={2023},<br>
-                          }<br>
-                        </code>-->
-                    If you have any questions, please concat us at yilun.jin@connect.ust.hk and amzzhe@amazon.com. 
+                    If you have any questions, please contact us at yilun.jin@connect.ust.hk and amzzhe@amazon.com. 
                     </div>
                 </div>
             </div>
