--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                         focused on reproducibility. After the submission deadline, the names and order of authors cannot be changed. 
                         </p>
                         <p>Our dataset paper is available at <a href="https://arxiv.org/abs/2307.09688">ArXiv</a>, and the Shopping MMLU dataset is available at <a href="https://github.com/KL4805/ShoppingMMLU">github</a>. Please cite our paper if you find our work helpful. <br>
-                        
+			</p>
                     If you have any questions, please contact us at yilun.jin@connect.ust.hk and amzzhe@amazon.com. 
                     </div>
                 </div>
@@ -625,21 +625,18 @@
                     <div class="col-lg-8">
                         <br>
                         <h2 style="text-align: center;">DATA</h2>
-			    Data and paper under preparation. Stay tuned!
-			<!--
-                        <p>The data and its license is available at the following link.<br>
-                            <a href="https://www.aicrowd.com/challenges/amazon-kdd-cup-23-multilingual-recommendation-challenge">https://www.aicrowd.com/challenges/amazon-kdd-cup-23-multilingual-recommendation-challenge</a><br>
+                        <p>The data and its license is available at <a href="https://github.com/KL4805/ShoppingMMLU"">github</a>.<br>
                             If you plan to use this dataset for your own research, please cite this paper. <br>
                         </p>
                         <code>
-                            @article{jin2023amazon,<br>
-                                title={Amazon-M2: A Multilingual Multi-locale Shopping Session Dataset for Recommendation and Text Generation},<br>
-                                author={Wei Jin and Haitao Mao and Zheng Li and Haoming Jiang and Chen Luo and Hongzhi Wen and Haoyu Han and Hanqing Lu and Zhengyang Wang and Ruirui Li and Zhen Li and Monica Xiao Cheng and Rahul Goutam and Haiyang Zhang and Karthik Subbian and Suhang Wang and Yizhou Sun and Jiliang Tang and Bing Yin and Xianfeng Tang},<br>
-                                journal={arXiv preprint arXiv:2307.09688}, <br>
-                                year={2023},<br>
-                          }<br>
+			@article{jin2024shopping,<br>
+				title={Shopping MMLU: A Massive Multi-Task Online Shopping Benchmark for Large Language Models},<br>
+				author={Jin, Yilun and Li, Zheng and Zhang, Chenwei and Cao, Tianyu and Gao, Yifan and Jayarao, Pratik and Li, Mao and Liu, Xin and Sarkhel, Ritesh and Tang, Xianfeng and others},<br>
+				journal={arXiv preprint arXiv:2410.20745},<br>
+				year={2024}<br>
+			}<br>
                         </code>
-			-->
+
                         <br><br><br><br><br><br><br><br>
                     </div>
                 </div>
